# viral-marketing

./: .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  dump.rdb  main.py  manage.py  pyproject.toml  requirements.txt  start_dev.sh  test.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd-full.yml
apps/accounts/: apps.py  choices.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py
apps/analysis/: analyzers.py  apps.py  choices.py  filters.py  forms.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/analysis/migrations/: 0001_initial.py  0002_initial.py  0002_sentimentanalysis.py  0003_sentimentanalysis.py  (+2 more)
apps/frontend/: forms.py  tests.py  urls.py  views.py
apps/notifications/: models.py  tests.py  urls.py  views.py
apps/transaction_history/: admin.py  apps.py  choices.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/users/: admin.py  authentication.py  choices.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
config/: __init__.py  celery.py  tasks.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
core/: admin.py  apps.py  models.py  tests.py
core/migrations/: 0001_initial.py  0002_accounts_transactions.py  0002_delete_user.py
scripts/: run.sh
static/css/: custom.css
templates/: accounts_list.html  base.html  dashboard.html  logged_out.html  login.html  main.html  profile.html  register.html  transactions_list.html
templates/account/: account_inactive.html  logout.html  signup.html  signup_complete.html
templates/frontend/: analysis_edit_form.html  analysis_history.html  sentiment_analysis.html  spending_reports.html  transaction_analysis_form.html
templates/socialaccount/: login.html  signup.html
(+24 files in other folders)
